Site/src/app/storage/storage.component.css
.ThreeColumn {
  display: grid;
  grid-template-columns: repeat(3, max-content);
}
.Underline {
  text-decoration: underline;
}
.StorageDiv {
  display: flex;
  flex-direction: row;
}
#storage-inputs-div {
  display: flex;
  flex-direction: column;
}
.Messages {
  display: flex;
  flex-direction: column;
  flex-wrap: wrap;
}
.Message {
  display: flex;
}
.Form {
  display: block;
  width: 250px;
}
#lists {
  display: flex;
}
.List {
  display: block;
  margin: 0px auto auto auto;
}
dt {
  margin: auto auto auto 10%;
}
dd {
  margin: auto auto auto 20%;
}

